--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+*
+{
+    box-sizing: border-box;
+}
+
 body {
     background: url('Component/images/cloud.avif') no-repeat;
     background-size: cover;
     margin:0px;
+    color:white;
 }
